samples/_failures_safe/1761220432_884442_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_397ef39c.c: In function ‘tokenize’:
./samples/SAFE/__tmp_397ef39c.c:167:13: error: expected expression at end of input
  167 |             add_token(lexer, TOKEN_ERROR,
      |             ^~~~~~~~~
./samples/SAFE/__tmp_397ef39c.c:167:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_397ef39c.c:167:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_397ef39c.c:167:13: error: expected declaration or statement at end of input
